# Research

./: outreach_contacts.csv  readme.md
additionalPapers/: EvoStrategies(DariaEtal).md  EvoStrategies(DariaEtal)_summary.md  EvoStrategies(OpenAI).md  LLMFinetuningWithEvo(QiuEtal)_summary.md
annotatedBib/: main.aux  main.fdb_latexmk  main.tex
docs/: CoEvoRL_Project_Overview.docx  CoEvoRL_Project_Overview.md
docs/additionalPapers/: EvoStrategies(OpenAI)_summary.md  LLMFinetuningWithEvo(QiuEtal).md
docs/annotatedBib/: Annotated Bibliography.pptx  main.fls
docs/geraudsPapers/: EvoAlgos(MouretJeanEtal).md  EvoAlgos(MouretJeanEtal)_summary.md  (+3 more)
experiments/: Makefile  pyproject.toml  readme.md
experiments/logs/: model_structure.txt
experiments/logs/phase1/: .gitignore  gen_001.json  gen_002.json  gen_003.json  gen_004.json  gen_005.json  gen_006.json  gen_007.json  gen_008.json  history.json
experiments/src/: exp1.py  load_model.py  model_test.py
experiments/src/logs/attack_20260412_211126/: config.json  gen_001.json  gen_002.json  gen_003.json
experiments/src/logs/attack_20260412_211858/: config.json  gen_001.json  gen_002.json  gen_003.json  gen_004.json  gen_005.json
experiments/src/logs/attack_20260412_213014/: config.json  gen_001.json  gen_002.json  gen_003.json  gen_004.json  gen_005.json  gen_006.json  gen_007.json  gen_008.json  gen_009.json  gen_010.json  gen_011.json  gen_012.json
geraudsPapers/: ProblemWithStochasticSafeRL(GeraudEtal).md  ProblemWithStochasticSafeRL(GeraudEtal)_summary.md  SafeRL(JiEtal)_summary.md
prelim/: readme.md
