[project]
name = "safe-ai-evo"
version = "0.1.0"
requires-python = "==3.13.12"

dependencies = [
    "torch==2.11.0",
    "transformers>=4.40.0",
    "peft>=0.10.0",          # LoRA
    "accelerate>=0.29.0",
    "cma>=3.3.0",            # CMA-ES
    "trl>=0.8.0",            # PPO / RLHF utils
    "datasets>=2.19.0",
    "huggingface-hub>=0.22.0",
]